--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,9 +1,14 @@
+sogo (5.3.0.1.20211126-2) stable; urgency=medium
+
+  * New upstream release.
+
+ -- Filip Paczyński, Promonotes sp. z o.o. <filip@promonotes.pl>  Fri, 26 Nov 2021 15:33:00 +0100
+
 sogo (5.3.0.20211126-1) stable; urgency=medium
 
   * New upstream release.
 
- -- Promonotes IT <it@promonotes.pl>  Fri, 26 November 2021 14:33:00 +0100
-
+ -- Filip Paczyński, Promonotes sp. z o.o. <filip@promonotes.pl>  Fri, 26 Nov 2021 14:33:00 +0100
 
 sogo (1.3.5) unstable; urgency=low
 
